# MultiArray

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md
benchmark/: CMakeLists.txt
benchmark/src/: bench.cpp
benchmark/src/iterator/: IteratorBench.cpp
benchmark/src/range/: RangeBench.cpp
cmake/: MultiArrayConfig.cmake.in
inc/: Array.h  Array2.h  Pointer.h  Vector.h  ma
inc/common/: function.h  traits.h  type.h
inc/data/: Container.h  containerFunction.h
inc/dimension/: Dimension.h
inc/iterator/: Iterator.h  LinearIterator.h  SpaceIterator.h  iterator  iteratorFunction.h
inc/ma/: config.h  function.h  ma  traits.h  type.h
inc/ma.old/array/: ArrayView.h  BaseArray.h  MArray.h  SArray.h
inc/ma.old/copy/: memCopy.h
inc/ma.old/data/: containerFunction.h
inc/ma.old/detail/: ForceCopy.h  base.h  function.h  traits.h  type.h
inc/ma.old/dimension/: dimensionFunction.h
inc/ma.old/iterator/: Iterator.h  ShapeIterator.h
inc/ma.old/range/: rangeFunction.h
inc/ma.old/shape/: MShape.h  SimpleShape.h
inc/ma/algorithm/: copy.h
inc/ma/array/: ArrayView.h  BaseArray.h  MArray.h  SArray.h
inc/ma/container/: Container.h  SharedContainer.h
inc/ma/copy/: memCopy.h
inc/ma/data/: containerFunction.h
inc/ma/detail/: Variant.h  function.h  traits.h  type.h
inc/ma/dimension/: BasicShape.h  Dimension.h  MultiShape.h  dimensionFunction.h
inc/ma/iterator/: Iterator.h  LinearIterator.h  ShapeIterator.h  StepIterator.h  iteratorFunction.h
inc/ma/range/: LinearRange.h  Range.h  RangeAdaptor.h  rangeFunction.h
inc/ma/shape/: MShape.h  SimpleShape.h
inc/ma_api/: config.h  function.h  printData.h  traits.h  type.h
inc/ma_api/algorithm/: copy.h
inc/ma_api/array/: Array.h  ArrayView.h
inc/ma_api/container/: Container.h  SharedContainer.h
inc/ma_api/data/: DataContainer.h
inc/ma_api/detail/: Variant.h
inc/ma_api/dimension/: BasicShape.h  Dimension.h  MultiShape.h  dimensionFunction.h
inc/ma_api/iterator/: Iterator.h  LinearIterator.h  ShapeIterator.h  StepIterator.h  iteratorFunction.h
inc/ma_api/range/: LinearRange.h  Range.h  RangeAdaptor.h  rangeFunction.h
inc/old/: Array.h.old
inc/range/: LinearRange.h  Range.h  RangeContainer.h  range  rangeFunction.h
inc/space/: Space.h  spaceFunction.h
inc_cuh/: cuArray.h
python/: CMakeLists.txt
python/inc/: ContainerInterface.h  TypeDescriptor.h  arrayBind.h  typeList.h
python/src/: ContainerInterface.cpp  MultiArrayWrap.cpp
sandbox/: Makefile  main.cpp
test/: CMakeLists.txt  Makefile
test/src.old/array/: BaseArrayTest.cpp
test/src.old/copy/: memCopyTest.cpp
test/src.old/detail/: functionTest.cpp
test/src.old/iterator/: IteratorTest.cpp  LinearIteratorTest.cpp  ShapeIteratorTest.cpp  StepIteratorTest.cpp
test/src.old/ma/: ArrayTest.cpp  PointerTest.cpp
test/src/array/: ArrayTest.cpp  ArrayViewTest.cpp  BaseArrayTest.cpp
test/src/container/: ContainerTest.cpp  SharedContainerTest.cpp
test/src/copy/: memCopyTest.cpp
test/src/data/: DataContainerTest.cpp
test/src/detail/: functionTest.cpp
test/src/dimension/: BasicShapeTest.cpp  DimensionTest.cpp  MultiShapeTest.cpp  dimensionFunctionTest.cpp
test/src/iterator/: IteratorTest.cpp  LinearIteratorTest.cpp  ShapeIteratorTest.cpp  SpaceIteratorTest.cpp  StepIteratorTest.cpp  iteratorFunctionTest.cpp
test/src/ma/: ArrayTest.cpp  CustomAllocatorTest.cpp  PointerTest.cpp
test/src/range/: LinearRangeTest.cpp  RangeTest.cpp  rangeFunctionTest.cpp
test/src/shape/: MShapeTest.cpp  SimpleShapeTest.cpp
test/src/space/: SpaceTest.cpp
